Extend NotifiableDiseaseCase to match WHO IDSR/UKHSA standard forms (onset date, vaccination, travel, occupation, outcome)