@@ -1,44 +1,42 @@
 # Current Status — read this first in any new chat
 
-Last updated: 2026-07-26
+Last updated: 2026-07-27
 
 ## Where we are right now
 
-All 3 steps of the short-term roadmap are complete AND validated: data
-store → Render deploy → Metabase. Metabase (Open Source, self-hosted,
-free) runs locally from `C:\metabase\metabase.jar` via
-`java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar`
-(needs Java 21+; not in git, not part of this repo), connected to the
-Render Postgres instance.
+The Notifiable Disease report type is end-to-end complete and has its own
+custom dashboard. Pipeline: raw text -> GLiNER NER + rule-based fields ->
+confidence report -> editable review UI -> save to Render Postgres ->
+appears immediately on the dashboard.
 
-Beyond the roadmap, the Notifiable Disease domain has had two extra
-phases of work, both driven by the user pushing back that a working
-pipeline isn't the same as a decision-ready one:
+**The dashboard is now a custom page in our own frontend, not Metabase.**
+`frontend/prototype/dashboard.html` (Chart.js, reuses `style.css` so it
+matches the product's green identity), fed by
+`GET /reports/notifiable-disease/dashboard-data`. Four controls that all
+combine with AND: disease, year, region, and measure (case count vs rate
+per 100,000). Five charts: by disease, by region, over time, by age
+group, by sex — plus four summary metrics. Measure applies to every
+breakdown, which is why population is stored stratified by region x age
+group x sex in `population_strata`.
 
-- **Phase 2 (live sync)**: local backend now points at Render Postgres
-  via `$env:DATABASE_URL` (see Local dev routine below) — any record
-  saved locally through the review UI appears in Metabase immediately.
-- **Phase 3 (dashboard v2)**: dashboard "Notifiable Disease Overview" now
-  has 7 questions with real chart types (bar/pie/line, not flat tables):
-  Cases by Disease, Cases by Region, Cases by Sex, Cases by Age Group,
-  Cases Over Time, % Needing Review, and Rate per 100k by Region (joined
-  against a new `region_population` reference table — real public 2025
-  Kuwait governorate population estimates, not synthetic). A
-  dashboard-level "Disease" filter cross-filters 6 of the 7 questions at
-  once. Explicitly not attempted: ethnicity breakdown (sensitive
-  attribute, deliberately uncollected) or a region choropleth map
-  (Metabase has no native support for custom Kuwait boundaries).
+Metabase was used for two days and then dropped — see the 2026-07-27
+entry in decisions-log.md for the full reasoning. Short version: it can't
+be styled to match the product, which matters because this dashboard is
+meant to be shown to decision-makers, not just used internally. All the
+indicator SQL carried over unchanged; only the rendering layer was
+replaced. Metabase can still be run locally if wanted (`C:\metabase\
+metabase.jar`, Java 21+, not in this repo) but is no longer part of the
+workflow.
 
-Docx file upload — previously the agreed next step — was **descoped
-entirely**, not deferred: the user confirmed the real workflow is
+Docx file upload was **descoped entirely**, not deferred: the workflow is
 free-text only (a clinician types or pastes a report, extracts, saves),
 with no file upload and no live hospital system integration.
 
-**Open question, not yet decided**: is the Notifiable Disease domain now
-mature enough to be worth showing a decision-maker, justifying a move to
-more report types (Immunization next) — or does it need further
-depth first? Ask at the start of the next session rather than assuming
-either way.
+**Open question for the next session**: is the Notifiable Disease domain
+now mature enough to show a decision-maker — which would justify moving
+on to more report types (Immunization next) — or is more depth needed
+first? Ask rather than assuming. One known gap either way: only 8 records
+exist, which is too few to demonstrate anything convincingly.
 
 ## What's already working (locally)
 
@@ -50,6 +48,8 @@ either way.
   needed_review flagging (low-confidence fields flagged for a human).
 - Frontend prototype (static HTML/CSS/JS) at `frontend/prototype/`,
   green-themed, distinct from the sibling de-identification tool.
+- Custom dashboard at `frontend/prototype/dashboard.html` — four combined
+  filters, five Chart.js charts, count/rate toggle.
 
 ## What's not built yet
 
@@ -60,18 +60,21 @@ either way.
 - File upload of any kind — deliberately out of scope; workflow is
   free-text only (see Where we are right now).
 - Frontend is not yet pointed at the deployed Render URL — still hardcoded
-  to `http://127.0.0.1:8001` in `frontend/prototype/app.js`.
+  to `http://127.0.0.1:8001` in both `app.js` and `dashboard.html`.
+- Only 8 records in the database — enough to prove the pipeline, too few
+  to demonstrate epidemiological patterns to anyone.
+- Dashboard refresh takes 3-4s: ~12 separate queries against Render's
+  free-tier Postgres in Oregon. Latency, not a code problem.
 
-## Local dev routine (three terminals, every session)
+## Local dev routine (two terminals, every session)
 
-See `README.md`. Terminal 1 (backend, port 8001) now needs
-`$env:DATABASE_URL` set to the Render external connection string before
-starting uvicorn, so local saves land in the same Postgres Metabase
-reads from — otherwise it falls back to a local Postgres URL that
-doesn't exist. Terminal 2: frontend static server, port 5500. Terminal 3:
-Metabase, port 3000 (optional — only needed to view/update the
-dashboard). Never open `index.html` as a `file://` path (CORS/private-
-network blocking).
+See `README.md`. Terminal 1 (backend, port 8001) needs `$env:DATABASE_URL`
+set to the Render external connection string before starting uvicorn, so
+saves and dashboard queries hit the same database — otherwise it falls
+back to a local Postgres URL that isn't set up. Terminal 2: frontend
+static server, port 5500 (serves both `index.html` and `dashboard.html`).
+Never open the HTML files as a `file://` path (CORS/private-network
+blocking). Metabase (Terminal 3) is no longer part of the routine.
 
 ## Key ground rules established (see docs/decisions-log.md for full reasoning)
 
